--- a/source/Amazon.html
+++ b/source/Amazon.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -87,11 +87,11 @@
     <div class="hero">
         <div class="carousel"
   data-flickity='{ "wrapAround": true }'>
-  <div class="carousel-cell"><img src="/images/hero_image.jpg" alt=""></div>
-  <div class="carousel-cell"><img src="/images/hero_image2.jpg" alt=""></div>
-  <div class="carousel-cell"><img src="/images/hero_image3.jpg" alt=""></div>
-  <div class="carousel-cell"><img src="/images/hero_image4.jpg" alt=""></div>
-  <div class="carousel-cell"><img src="/images/hero_image5.jpg" alt=""></div>
+  <div class="carousel-cell"><img src="../images/hero_image.jpg" alt=""></div>
+  <div class="carousel-cell"><img src="../images/hero_image2.jpg" alt=""></div>
+  <div class="carousel-cell"><img src="../images/hero_image3.jpg" alt=""></div>
+  <div class="carousel-cell"><img src="../images/hero_image4.jpg" alt=""></div>
+  <div class="carousel-cell"><img src="../images/hero_image5.jpg" alt=""></div>
 </div>
        
     </div>
@@ -100,56 +100,56 @@
         <div class="box">
             <div class="box-content">
                 <h2>cloths</h2>
-                <div class="box-img" style="background-image: url('/images/box1_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box1_image.jpg');"></div>
                 <p><a href="#">see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('/images/box2_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box2_image.jpg');"></div>
                 <p><a href="#">shop now</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('/images/box3_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box3_image.jpg');"></div>
                 <p><a href="#">see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Electronics</h2>
-                <div class="box-img" style="background-image: url('/images/box4_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box4_image.jpg');"></div>
                 <p><a href="#">see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Beauty picks</h2>
-                <div class="box-img" style="background-image: url('/images/box5_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box5_image.jpg');"></div>
                 <p><a href="#">shop now</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Shop Pet supplies</h2>
-                <div class="box-img" style="background-image: url('/images/box6_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box6_image.jpg');"></div>
                 <p><a href="#">see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>New arrivals in Toys</h2>
-                <div class="box-img" style="background-image: url('/images/box7_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box7_image.jpg');"></div>
                 <p><a href="#">shop now</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Discover fashion trends</h2>
-                <div class="box-img" style="background-image: url('/images/box8_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box8_image.jpg');"></div>
                 <p><a href="#">see more</a></p>
             </div>
         </div>
